# qMorseAudio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: deps.cmake  flags.cmake  package.cmake  qt.cmake  version.cmake
desktop/: CMakeLists.txt  qmorseaudio.desktop.in
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  audio.cpp  audio.hpp  config.cpp  config.hpp  default.hpp  oscillator.cpp  oscillator.hpp
src/morseaudio/: CMakeLists.txt  config.cpp  config.hpp  icons.rc  main.cpp  main.hpp  morseaudio.cpp  morseaudio.hpp  version.hpp.in
src/morseaudio/windows/: about.cpp  about.hpp  about.ui  config.cpp  config.hpp  config.ui  main.cpp  main.hpp  main.ui
src/morseino/: CMakeLists.txt  config.cpp  config.hpp  default.hpp  morseino.cpp  morseino.hpp
src/utilities/: CMakeLists.txt  thread.cpp  thread.hpp
src/widgets/: CMakeLists.txt  morse_strip.cpp  morse_strip.hpp
test/: CMakeLists.txt
test/morseino/: CMakeLists.txt  morseino.cpp  morseino.hpp
